--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -86,7 +86,8 @@
             <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
 
                 <!-- START CENTERED WHITE CONTAINER -->
-                <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">PREVIEW_MESSAGE</span>
+                <!--/*@thymesVar id="preview_message" type="com.crud.tasks.service.MailCreatorService"*/-->
+                <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;" th:text="${preview_message}"></span>
                 <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
 
                     <!-- START MAIN CONTENT AREA -->
@@ -95,7 +96,9 @@
                             <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
+                                        <!--/*@thymesVar id="admin_name" type="com.crud.tasks.service.MailCreatorService"*/-->
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"> Dear <span th:text="${admin_name}"></span>,</p>
+                                        <!--/*@thymesVar id="message" type="com.crud.tasks.service.MailCreatorService"*/-->
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;" th:text="${message}"></p>.
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                                             <tbody>
@@ -105,6 +108,8 @@
                                                         <tbody>
                                                         <tr>
                                                             <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;">
+                                                                <!--/*@thymesVar id="tasks_url" type="com.crud.tasks.service.MailCreatorService"*/-->
+                                                                <!--/*@thymesVar id="button" type="com.crud.tasks.service.MailCreatorService"*/-->
                                                                 <a th:href="${tasks_url}" th:text="${button}" target="_blank" style="display: inline-block; color: #ffffff; background-color: #3498db; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;"></a>.
                                                             </td>
                                                         </tr>
@@ -115,6 +120,7 @@
                                             </tbody>
                                         </table>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+                                            <!--/*@thymesVar id="goodbye_message" type="com.crud.tasks.service.MailCreatorService"*/-->
                                             <span th:text="${goodbye_message}"></span>
                                         </p>
                                     </td>
@@ -131,9 +137,13 @@
                     <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                         <tr>
                             <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
+                                <!--/*@thymesVar id="company_name" type="com.crud.tasks.service.MailCreatorService"*/-->
                                 <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_name}"></span>
+                                <!--/*@thymesVar id="company_email" type="com.crud.tasks.service.MailCreatorService"*/-->
                                 <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_email}"></span>
+                                <!--/*@thymesVar id="company_phone" type="com.crud.tasks.service.MailCreatorService"*/-->
                                 <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_phone}"></span>
+                                <!--/*@thymesVar id="company_goal" type="com.crud.tasks.service.MailCreatorService"*/-->
                                 <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_goal}"></span>
                             </td>
                         </tr>
